tests/NormalTests/paczka1/small_fuzzy/35663145.err
Error in line 4: hpT A807 35,9
Error in line 1: yqBi26 A807 48,8
Error in line 13: A807 S744 18,73
Error in line 11: ZZFK4 A185 53,4
